--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.1",
     "mocha": "^3.2.0",
     "mongoose": "^4.8.1",
+    "pug": "^2.0.0-beta11",
     "request": "^2.79.0",
     "supertest": "^3.0.0"
   }
